--- a/assemblies/kafka-plugin/pom.xml
+++ b/assemblies/kafka-plugin/pom.xml
@@ -5,21 +5,21 @@
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <groupId>pentaho</groupId>
-    <artifactId>pentaho-big-data-assemblies</artifactId>
-    <version>10.1.0.0-SNAPSHOT</version>
+    <groupId>org.tahopen</groupId>
+    <artifactId>tahopen-big-data-assemblies</artifactId>
+    <version>0.1.0.0-SNAPSHOT</version>
   </parent>
 
-  <artifactId>pentaho-streaming-kafka-plugin</artifactId>
-  <version>10.1.0.0-SNAPSHOT</version>
+  <artifactId>tahopen-streaming-kafka-plugin</artifactId>
+  <version>0.1.0.0-SNAPSHOT</version>
   <packaging>pom</packaging>
 
-  <name>Pentaho Kafka Streaming Plugin</name>
+  <name>Tahopen Kafka Streaming Plugin</name>
 
   <dependencies>
     <dependency>
-      <groupId>pentaho</groupId>
-      <artifactId>pentaho-big-data-kettle-plugins-kafka</artifactId>
+      <groupId>org.tahopen</groupId>
+      <artifactId>tahopen-big-data-kettle-plugins-kafka</artifactId>
       <version>${project.version}</version>
     </dependency>
   </dependencies>
