--- a/kettle-plugins/hadoop-cluster/pom.xml
+++ b/kettle-plugins/hadoop-cluster/pom.xml
@@ -4,13 +4,13 @@
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <groupId>pentaho</groupId>
-    <artifactId>pentaho-big-data-kettle-plugins</artifactId>
-    <version>10.1.0.0-SNAPSHOT</version>
+    <groupId>org.tahopen</groupId>
+    <artifactId>tahopen-big-data-kettle-plugins</artifactId>
+    <version>0.1.0.0-SNAPSHOT</version>
   </parent>
 
-  <artifactId>pentaho-big-data-kettle-plugins-hadoop-cluster</artifactId>
-  <version>10.1.0.0-SNAPSHOT</version>
+  <artifactId>tahopen-big-data-kettle-plugins-hadoop-cluster</artifactId>
+  <version>0.1.0.0-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>Hadoop Cluster Plugin</name>
 
@@ -19,13 +19,13 @@
   </modules>
 
   <properties>
-    <pdi.version>10.1.0.0-SNAPSHOT</pdi.version>
+    <pdi.version>0.1.0.0-SNAPSHOT</pdi.version>
     <dependency.karaf.version>3.0.3</dependency.karaf.version>
     <dependency.osgi.version>4.3.1</dependency.osgi.version>
     <version.for.license>${project.version}</version.for.license>
     <js.project.list>requirejs,requirejs-text,angular,require-css,angular-i18n</js.project.list>
-    <pentaho-osgi-bundles.version>10.1.0.0-SNAPSHOT</pentaho-osgi-bundles.version>
-    <platform.version>10.1.0.0-SNAPSHOT</platform.version>
+    <pentaho-osgi-bundles.version>0.1.0.0-SNAPSHOT</pentaho-osgi-bundles.version>
+    <platform.version>0.1.0.0-SNAPSHOT</platform.version>
     <cxf.karaf.version>3.0.13</cxf.karaf.version>
     <require-css.version>0.1.8</require-css.version>
     <swt.version>4.6</swt.version>
@@ -36,32 +36,32 @@
   <dependencyManagement>
     <dependencies>
       <dependency>
-        <groupId>pentaho-kettle</groupId>
+        <groupId>tahopen-kettle</groupId>
         <artifactId>kettle-core</artifactId>
         <version>${pdi.version}</version>
         <scope>provided</scope>
       </dependency>
       <dependency>
-        <groupId>pentaho-kettle</groupId>
+        <groupId>tahopen-kettle</groupId>
         <artifactId>kettle-ui-swt</artifactId>
         <version>${pdi.version}</version>
         <scope>provided</scope>
       </dependency>
       <dependency>
-        <groupId>pentaho-kettle</groupId>
+        <groupId>tahopen-kettle</groupId>
         <artifactId>kettle-engine</artifactId>
         <version>${pdi.version}</version>
         <scope>provided</scope>
       </dependency>
       <dependency>
-        <groupId>pentaho</groupId>
-        <artifactId>pentaho-big-data-impl-clusterTests</artifactId>
+        <groupId>org.tahopen</groupId>
+        <artifactId>tahopen-big-data-impl-clusterTests</artifactId>
         <version>${project.version}</version>
         <scope>provided</scope>
       </dependency>
       <dependency>
-        <groupId>pentaho</groupId>
-        <artifactId>pentaho-platform-extensions</artifactId>
+        <groupId>org.tahopen</groupId>
+        <artifactId>tahopen-platform-extensions</artifactId>
         <version>${platform.version}</version>
         <scope>provided</scope>
         <exclusions>
@@ -72,8 +72,8 @@
         </exclusions>
       </dependency>
       <dependency>
-        <groupId>pentaho</groupId>
-        <artifactId>pentaho-i18n-bundle</artifactId>
+        <groupId>org.tahopen</groupId>
+        <artifactId>tahopen-i18n-bundle</artifactId>
         <version>${pentaho-osgi-bundles.version}</version>
         <scope>provided</scope>
         <exclusions>
@@ -84,8 +84,8 @@
         </exclusions>
       </dependency>
       <dependency>
-        <groupId>pentaho</groupId>
-        <artifactId>pentaho-i18n-webservice-bundle</artifactId>
+        <groupId>org.tahopen</groupId>
+        <artifactId>tahopen-i18n-webservice-bundle</artifactId>
         <version>${pentaho-osgi-bundles.version}</version>
         <scope>provided</scope>
         <exclusions>
@@ -126,7 +126,7 @@
         <scope>provided</scope>
       </dependency>
       <dependency>
-        <groupId>org.pentaho.di.plugins</groupId>
+        <groupId>org.tahopen.di.plugins</groupId>
         <artifactId>core-ui</artifactId>
         <version>${pdi.version}</version>
       </dependency>
